--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,15 +22,25 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 2rem 0;
-    text-align: center;
+    text-align: left;
+    margin: 0;
+    
+    @media(min-width: 768px){       
+        text-align: center;
+        margin: 2rem 0;
+    }
 }
 
 .image__pays{
-    width: 150px;
-    height: 100%;
-    object-fit: cover;
-    margin: 1rem;
+    display: none;
+
+    @media(min-width: 768px){       
+        width: 150px;
+        height: 100%;
+        object-fit: cover;
+        margin: 1rem;
+        display: block;
+    }
 }
 
 .contenu__restapi{
@@ -42,17 +52,26 @@
 }
 
 .contenu__pays{
-    margin: 1.5rem;
+    margin: 1rem;
+    @media(min-width: 768px){       
+        margin: 1.5rem;
+        
+    }
 }
 
 .restapi__pays{
     display: flex;
-    flex: 1 0 250px;
-    padding: 2rem;
-    align-items: center;
+    padding: 1rem;
     background-color: hsl(167, 57%, 37%);
     box-shadow: inset 0px 0px 8px 5px hsl(167, 76%, 13%, 0.5);
     border: 2px white solid;
+    flex-direction: column;
+    @media(min-width: 768px){       
+        flex: 1 0 250px;
+        padding: 2rem;
+        flex-direction: row;
+        align-items: center;
+    }
 }
 
 .restapi__carte > h3{
