--- a/style.css
+++ b/style.css
@@ -26,16 +26,28 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin: 2rem 0;
-  text-align: center;
+  text-align: left;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .titre__Image {
+    text-align: center;
+    margin: 2rem 0;
+  }
 }
 
 .image__pays {
-  width: 150px;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin: 1rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  .image__pays {
+    width: 150px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin: 1rem;
+    display: block;
+  }
 }
 
 .contenu__restapi {
@@ -47,17 +59,29 @@
 }
 
 .contenu__pays {
-  margin: 1.5rem;
+  margin: 1rem;
+}
+@media (min-width: 768px) {
+  .contenu__pays {
+    margin: 1.5rem;
+  }
 }
 
 .restapi__pays {
   display: flex;
-  flex: 1 0 250px;
-  padding: 2rem;
-  align-items: center;
+  padding: 1rem;
   background-color: hsl(167, 57%, 37%);
   box-shadow: inset 0px 0px 8px 5px hsla(167, 76%, 13%, 0.5);
   border: 2px white solid;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .restapi__pays {
+    flex: 1 0 250px;
+    padding: 2rem;
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .restapi__carte > h3 {
